--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
-      compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.4'
+      compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.7'
+      compile group: 'org.apache.pdfbox', name: 'xmpbox', version: '2.0.7'
       testCompile "junit:junit:4.12"
 }
