Changed Scroll-Speed; Added Enter-Action-Listener for Search-Button

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>new-nox-pot</name>
+	<name>NewNox-PoT</name>
 	<comment>Project new-nox-pot created by Buildship.</comment>
 	<projects>
 	</projects>
